--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,56 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{% if page.title %}{{ page.title }}{% else %}{{ site.harmony.name }}{% endif %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">        
+        <meta name="description" content="{% if page.meta_description %}{{ page.meta_description }}{% else %}{{ site.harmony.meta_description }}{% endif %}">
+        <link rel="canonical" 
+        href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+        
+        <!-- Harmony styles -->
+        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/main.css">
 
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+        <!-- Modernizr js -->
+        <script src="{{ site.baseurl }}/assets/js/modernizr.js"></script>    
 
-    <meta name="author" content="{{ site.name }}" />
-    <meta name="description" content="{{ site.description }}">
+        <!-- Load google font -->
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
 
-    <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+        <!-- IE Fxes -->
+        
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
-  </head>
-
-  <body>
-    <div class="wrapper-masthead">
-      <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-          
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-          
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
+        <script type="text/javascript">
+            WebFontConfig = {
+               google: { families: [ 'Ubuntu+Mono::latin' ] }
+            };
+            (function() {
+                var wf = document.createElement('script');
+                wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+                        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+                wf.type = 'text/javascript';
+                wf.async = 'true';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(wf, s);
+            })();
+        </script>
+    </head>
+    <body class="{{ site.harmony.basetheme }}">
+        <header class="main-header">
+            <div class="wc-container">
+                <h1><a href="{{ site.baseurl }}/">{{ site.harmony.name }}</a></h1>
+                <h2>{{ site.harmony.description }}</h2>
+                {% include header-links.html %}                
+            </div>
         </header>
-      </div>
-    </div>
-
-    <div id="main" role="main" class="container">
-      {{ content }}
-    </div>
-
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
+        {{ content }}
+        <footer class="main-footer">
+            <div class="wc-container">
+                <div class="column one">
+                    {% include footer-links.html %}                    
+                </div>
+                <div class="column two">
+                    {% include social.html %}
+                </div>
+            </div>
+            <p class="wc-container disclaimer">
+                {% include footer.html %}
+            </p>
         </footer>
-      </div>
-    </div>
-
-    {% include analytics.html %}
-  </body>
+    </body>
+    <!-- Google analytics  -->
+    {% include google-analytics.html %}
+    <!-- jQuery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- When no internet load JQuery from local -->
+    <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/assets/js/jquery.min.js"><\/script>')</script>
+    <!-- Site js -->
+    <script src="{{ site.baseurl }}/assets/js/all.js"></script>
 </html>
