--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
                     {% include footer-links.html %}                    
                 </div>
                 <div class="column two">
-                    {% include social.html %}
+                    {% include svg-icons.html %}
                 </div>
             </div>
             <p class="wc-container disclaimer">
