--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -1,4 +1,4 @@
-<h6>Few more links</h6>
+<h6><!--Bottom Nav or Blogroll title if needed--></h6>
 <ul class="menu">
     <li><a href="{{ site.url }}/about/">About</a></li>
     <li><a href="{{ site.url }}/blog/">Blog</a></li>
