--- a/_includes/footer-links.html
+++ b/_includes/footer-links.html
@@ -1,6 +1,7 @@
-<h6><!--Bottom Nav or Blogroll title if needed--></h6>
+<h6><!--Bottom Nav or Blogroll title if needed-->Navigate!</h6>
 <ul class="menu">
     <li><a href="{{ site.url }}/about/">About</a></li>
+	<li><a href="{{ site.url }}/todo/">ToDo</a></li>
     <li><a href="{{ site.url }}/blog/">Blog</a></li>
     <li><a href="{{ site.url }}/faq/">Help / FAQ</a></li>    
 </ul>		
