--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -5,12 +5,7 @@
 	<li>
 		<a href="{{ site.url }}/blog/">Blog</a><span>/</span>
 	</li>
-	{% if site.harmony.social.github %}
 	<li>
-		<a title="{{ site.harmony.social.github }} on Github" 
-			href="https://github.com/gayanvirajith/harmony" target="_blank">
-			Download
-		</a><span>/</span>
+		<a href="{{ site.url }}/projects/">My Projects</a><span></</span>
 	</li>
-	{% endif %}
 </ul>
