Fixed messed-up Bracket

--- a/_includes/header-links.html
+++ b/_includes/header-links.html
@@ -6,6 +6,6 @@
 		<a href="{{ site.url }}/blog/">Blog</a><span>/</span>
 	</li>
 	<li>
-		<a href="{{ site.url }}/projects/">My Projects</a><span></</span>
+		<a href="{{ site.url }}/projects/">My Projects</a><span>/</span>
 	</li>
 </ul>
